datagrid-NP.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
name: allow-hotrod
spec:
 podSelector:
   matchLabels:
     app: datagrid
 ingress:
 - from: 
   - podSelector:
       matchLabels:
         app: eap-hotrod
- ports:
  - protocol: TCP
    port: 11333
