teamplayerapp-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
name: allow-datagrid
spec:
 podSelector:
   matchLabels:
     app: eap-hotrod
 ingress:
 - from: 
   - podSelector:
       matchLabels:
         app: datagrid
- ports:
  - protocol: TCP
    port: 8080
  - protocol: TCP
    port: 8443
  - protocol: TCP
    port: 8778
